force-app/main/default/objects/CTRComplianceRiskLevelMatrix__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTRComplianceRiskLevelEvaluation__c</fullName>
        <label>CTRComplianceRiskLevelEvaluation</label>
        <referenceTo>CTRComplianceRiskLevelEvaluation__mdt</referenceTo>
        <relationshipLabel>CTRComplianceRiskLevelMatrix</relationshipLabel>
        <relationshipName>CTRComplianceRiskLevelMatrix</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ComplianceRiskNews__c</fullName>
        <label>Compliance Risk News</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>News__c</fullName>
        <label>News</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Found</fullName>
                    <default>true</default>
                    <label>Not Found</label>
                </value>
                <value>
                    <fullName>Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Found</fullName>
                    <default>true</default>
                    <label>Not Found</label>
                </value>
                <value>
                    <fullName>Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTRComplianceRiskLevelMatrix</label>
</CustomObject>